[package]
edition = "2024"
name = "testicles"
version = "0.1.0"

[dependencies]
tls_lib = {path = "../tls-lib"}
windows = {version = "0.60", features = [
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemServices",
  "Win32_System_SystemInformation",
]}
